// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopCitiesRealtime when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_city"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Cities
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The city from which user activity originates. Location data may be affected by a user's VPN usage.
        </span>
      </span>
    </a>
    <a
      aria-label="top-cities-realtime.csv"
      href="http://www.example.com/data//top-cities-realtime.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_top-cities-realtime"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    >
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Felixtown
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            2.1%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 2%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            New Alejandrachester
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            5%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 5%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            New Penelopeport
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            6.2%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 6%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Erynfort
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            1.6%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 2%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Palm Bay
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            7.8%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 8%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Lake Taya
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            0.5%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Alexanebury
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            2%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 2%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            West Julianabury
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            8.1%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 8%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Rodriguezshire
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            4.7%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 5%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Fort Althea
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            4.8%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 5%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            East Catalinachester
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            1%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 1%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Port Reystad
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            2.6%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 3%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            Franciscoboro
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            5.9%
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 6%;"
          />
        </div>
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopCitiesRealtime when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_city"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Cities
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The city from which user activity originates. Location data may be affected by a user's VPN usage.
        </span>
      </span>
    </a>
    <a
      aria-label="top-cities-realtime.csv"
      href="http://www.example.com/data//top-cities-realtime.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_top-cities-realtime"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopCitiesRealtime when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_city"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Cities
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The city from which user activity originates. Location data may be affected by a user's VPN usage.
        </span>
      </span>
    </a>
    <a
      aria-label="top-cities-realtime.csv"
      href="http://www.example.com/data//top-cities-realtime.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_top-cities-realtime"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;
